# qwerty-melior

./: README.md
melior/: Cargo.toml
melior/src/: context.rs  diagnostic.rs  dialect.rs  error.rs  execution_engine.rs  greedy_rewrite_driver.rs  ir.rs  ir_rewriter.rs  lib.rs  logical_result.rs  pass.rs  rewrite_pattern.rs  string_ref.rs  target.rs  test.rs  thread_pool.rs  utility.rs
melior/src/diagnostic/: handler_id.rs  severity.rs
melior/src/dialect/: ccirc.rs  handle.rs  ods.rs  qcirc.rs  qwerty.rs  registry.rs
melior/src/dialect/llvm/: type.rs
melior/src/dialect/snapshots/: melior__dialect__qwerty__tests__compile_function.snap  melior__dialect__qwerty__tests__qwerty.bitpack.snap
melior/src/ir/: affine_expr.rs  affine_map.rs  attribute.rs  block.rs  bytecode_writer_config.rs  identifier.rs  location.rs  module.rs  operation.rs  region.rs  symbol_table.rs  type.rs  value.rs
melior/src/ir/attribute/: array.rs  attribute_like.rs  bool.rs  dense_elements.rs  dense_i32_array.rs  dense_i64_array.rs  dictionary.rs  distinct.rs  flat_symbol_ref.rs  float.rs  integer.rs  macro.rs  strided_layout.rs  string.rs  type.rs
melior/src/ir/block/: argument.rs  block_like.rs
melior/src/ir/operation/: builder.rs  operation_like.rs  printing_flags.rs  result.rs
melior/src/ir/region/: region_like.rs
melior/src/ir/type/: function.rs  id.rs  integer.rs  macro.rs  mem_ref.rs  ranked_tensor.rs  shaped_type_like.rs  tuple.rs  type_like.rs
melior/src/ir/value/: value_like.rs
melior/src/pass/: external.rs  manager.rs  operation_manager.rs  transform.rs
(+5 files in other folders)
