[package]
name = "melior"
description = "Qwerty version of rustic MLIR bindings in Rust"
version = "0.25.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/qwerty-mlir-rs/qwerty-melior"
keywords = ["mlir", "llvm"]
categories = ["api-bindings"]

[features]
ods-dialects = []
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]

[dependencies]
melior-macro = { version = "0.18.0", path = "../macro" }
qwerty-mlir-sys = { version = "0.5.0", path = "../../qwerty_mlir_sys" }

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.2"
pretty_assertions = "1.4.1"
