[package]
name = "melior"
version = "0.27.0"
edition.workspace = true
description = "Qwerty version of rustic MLIR bindings in Rust"
documentation = "https://mlir-rs.github.io/melior/melior/"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings"]

[dependencies]
dashu = "0.4.2"
bitflags = "2.9.1"
melior-macro = { path = "../macro", version = "0.20.0" }
qwerty-mlir-sys = { version = "220.0.2", path = "../../qwerty_mlir_sys" }

[dev-dependencies]
indoc = "2.0.7"
insta = "1.47.2"
pretty_assertions = "1.4.1"

[features]
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]
ods-dialects = []
